Fixed line break on resize

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ a.toggle-unit:hover {
   padding: 0;
   margin: 0;
 }
-.col-sm-12 {
+.col-12 {
   padding: 0;
 }
 #local-button {
@@ -55,7 +55,7 @@ a.toggle-unit:hover {
   left: 3rem;
 }
 #current-city {
-  font-size: 2.3rem;
+  font-size: 2.4rem;
   text-align: center;
   text-transform: capitalize;
   position: relative;
